--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,6 +2,7 @@ apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
 apply plugin: 'kotlin-kapt'
+apply plugin: 'androidx.navigation.safeargs'
 
 
 ext {
@@ -59,6 +60,8 @@ dependencies {
     // Reactive
     implementation "io.reactivex.rxjava2:rxjava:$rxjava_version"
     implementation 'io.reactivex.rxjava2:rxandroid:2.0.2'
+    implementation 'com.jakewharton.rxbinding2:rxbinding:2.1.1'
+
     // Dependency Injection
     implementation "org.koin:koin-android:$koin_version"
     implementation "org.koin:koin-android-viewmodel:$koin_version"
@@ -68,6 +71,9 @@ dependencies {
 
     // UI
     implementation 'com.airbnb.android:lottie:2.6.1'
+    implementation "com.github.bumptech.glide:glide:4.6.1"
+    kapt "com.github.bumptech.glide:compiler:4.6.1"
+    implementation "com.caverock:androidsvg:1.2.1"
 
     // Tests
     testImplementation 'junit:junit:4.12'
