--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,7 +36,9 @@ android {
         targetCompatibility JavaVersion.VERSION_1_8
     }
 }
-
+androidExtensions {
+    experimental = true
+}
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
@@ -49,6 +51,7 @@ dependencies {
     // Database
     implementation 'android.arch.persistence.room:rxjava2:1.1.1'
     implementation 'android.arch.persistence.room:runtime:1.1.1'
+    implementation 'com.google.android.gms:play-services-maps:15.0.1'
     kapt "android.arch.persistence.room:compiler:1.1.1"
     // Network
     implementation 'com.google.code.gson:gson:2.8.2'
@@ -74,6 +77,7 @@ dependencies {
     implementation "com.github.bumptech.glide:glide:4.6.1"
     kapt "com.github.bumptech.glide:compiler:4.6.1"
     implementation "com.caverock:androidsvg:1.2.1"
+    implementation "com.google.android.gms:play-services-maps:15.0.1"
 
     // Tests
     testImplementation 'junit:junit:4.12'
